--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,17 +7,24 @@
   "scripts": {
     "backend": "cross-env NODE_ENV=development nodemon ./backend/server.js",
     "frontend": "cross-env NODE_ENV=development npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "prod": "cross-env NODE_ENV=production env-cmd -f .env.production node backend/server.js",
-    "start": "node backend/server.js",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run backend\" \"npm run frontend\"",
+    "prod": "cross-env NODE_ENV=production env-cmd -f .env.prod node backend/server.js",
+    "start": "cross-env NODE_ENV=production node backend/server.js",
     "test": "npm run test:backend:unit && npm run test:backend:functional && npm run test:backend:integration && npm run test:frontend:unit && npm run test:frontend:functional && npm run test:frontend:integration",
-    "test:backend:unit": "cross-env NODE_ENV=test vitest tests/backend/unit --config ./vitest.config.cjs",
-    "test:frontend:unit": "cross-env NODE_ENV=test jest tests/frontend/unit",
-    "test:backend:functional": "cross-env NODE_ENV=test vitest tests/backend/functional --config ./vitest.config.cjs",
-    "test:frontend:functional": "cross-env NODE_ENV=test jest tests/frontend/functional",
-    "test:backend:integration": "cross-env NODE_ENV=test vitest tests/backend/integration --config ./vitest.config.cjs",
-    "test:frontend:integration": "cross-env NODE_ENV=test jest tests/frontend/integration",
-    "test:e2e": "cross-env NODE_ENV=test cypress run",
+    "test:local": "npm run test:backend:unit:local && npm run test:backend:functional:local && npm run test:backend:integration:local && npm run test:frontend:unit && npm run test:frontend:functional && npm run test:frontend:integration && npm run test:e2e:run:local",
+    "test:backend:unit:local": "env-cmd -f .env.local.test vitest tests/backend/unit --config ./vitest.config.cjs",
+    "test:backend:functional:local": "env-cmd -f .env.local.test vitest tests/backend/functional --config ./vitest.config.cjs",
+    "test:backend:integration:local": "env-cmd -f .env.local.test vitest tests/backend/integration --config ./vitest.config.cjs",
+    "test:e2e:open:local": "cypress open --config-file cypress/cypress.config.js",
+    "test:e2e:run:local": "cypress run --config-file cypress/cypress.config.js",
+    "test:docker": "npm run test:backend:unit:docker && npm run test:backend:functional:docker && npm run test:backend:integration:docker && npm run test:frontend:unit && npm run test:frontend:functional && npm run test:frontend:integration && npm run test:e2e:run:docker",
+    "test:backend:unit:docker": "env-cmd -f .env.docker.test vitest tests/backend/unit --config ./vitest.config.cjs",
+    "test:backend:functional:docker": "env-cmd -f .env.docker.test vitest tests/backend/functional --config ./vitest.config.cjs",
+    "test:backend:integration:docker": "env-cmd -f .env.docker.test vitest tests/backend/integration --config ./vitest.config.cjs",
+    "test:e2e:run:docker": "cypress run --config-file cypress/cypress.config.js",
+    "test:frontend:unit": "jest tests/frontend/unit",
+    "test:frontend:functional": "jest tests/frontend/functional",
+    "test:frontend:integration": "jest tests/frontend/integration",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -107,6 +114,7 @@
     "chai-http": "^4.4.0",
     "cross-env": "^7.0.3",
     "cypress": "^13.10.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
